--- a/jughead.html
+++ b/jughead.html
@@ -24,6 +24,36 @@
 
                     <a href="https://riverdale.fandom.com/wiki/Jughead_Jones" ></a>
 
+
+                    <form>
+    First name:
+<input type="text" name="firstname"> 
+<br>
+<br>
+    Last name:
+ 	<input type="text" name="lastname"> 
+     <br>
+     <br>
+    Email 
+<input type="text"name="Email Address">
+<br>
+<br>
+    <p>Escape</p>
+    <br>
+    <input type="radio" name="SUV" value="Escape">
+    <br>
+        <p>Bronco</p>
+    <input type="radio" name="SUV" value="Bronco">
+    <br>
+    <p>Jeep</p>
+    <input type="radio" name="SUV" value="Jeep" >
+    <br>
+    <br>
+
+    <button type="submit">submit</button>
+</form>
+
+
                  </body>
     
     
