--- a/veroica.html
+++ b/veroica.html
@@ -22,6 +22,25 @@
                         <a href="https://riverdale.fandom.com/wiki/Veronica_Lodge"></a>
 
 
+                <table>
+                    <tr>
+                        <th><i>First Name</i></th>
+                        <th><i>Last Name</i></th>
+                    </tr>
+                    <tr> 
+                            <td>Tatiana</td>
+                            <td>Marsh</td>
+                     </tr>
+                    <tr> 
+                            <td>Veronica</td>
+                            <td>Lodge</td>
+                    </tr>
+                </table>
+
+
+
+
+
             </body>
     
     
