--- a/veroica.html
+++ b/veroica.html
@@ -37,6 +37,33 @@
                     </tr>
                 </table>
 
+<form>
+    First name:
+<input type="text" name="firstname"> 
+<br>
+<br>
+    Last name:
+ 	<input type="text" name="lastname"> 
+     <br>
+     <br>
+    Email 
+<input type="text"name="Email Address">
+<br>
+<br>
+    <p>Escape</p>
+    <br>
+    <input type="radio" name="SUV" value="Escape">
+    <br>
+        <p>Bronco</p>
+    <input type="radio" name="SUV" value="Bronco">
+    <br>
+    <p>Jeep</p>
+    <input type="radio" name="SUV" value="Jeep" >
+    <br>
+    <br>
+
+    <button type="submit">submit</button>
+</form>
 
 
 
