--- a/jughead.html
+++ b/jughead.html
@@ -38,7 +38,7 @@
 <input type="text"name="Email Address">
 <br>
 <br>
-    <p>Escape</p>
+    <p>Taurus</p>
     <br>
     <input type="radio" name="SUV" value="Escape">
     <br>
