--- a/betty.html
+++ b/betty.html
@@ -6,7 +6,15 @@
       </head>
         
         <body>
-        
+              <nav>
+                    <a href="default.html">Home</a>
+                     <a href="news.html">News</a>
+                     <a href="contact.html">Contact</a>
+                    <a href="about.html">About</a>
+            </nav>
+
+
+
         <h1>Betty</h1>
         <h2>Betty</h2>
         <h3>Betty</h3>
