--- a/veroica.html
+++ b/veroica.html
@@ -5,6 +5,19 @@
         </head>
     
             <body>
+            <ul>
+              <li><a href="default.html">Home</a></li>
+              <li><a href="news.html">News</a></li>
+               <li><a href="contact.html">Contact</a></li>
+               <li><a href="about.html">About</a></li>
+            </ul>
+    <nav>
+             <a href="default.html">Home</a>
+            <a href="news.html">News</a>
+            <a href="contact.html">Contact</a>
+             <a href="about.html">About</a>
+     </nav>
+
                <h2> My Other Favorite Female Character is Veronica Lodge. </h2>
                     <p> she is also one of my favorite characters because even though her dad is a well known criminals she still tries her best to not go down his path and do crminal things. She stills finds ways to make things go her way.  </p>
                         <img src="https://pbs.twimg.com/profile_images/1259561223642927104/GHS3P4jY_400x400.jpg"width=100%/>
