--- a/jughead.html
+++ b/jughead.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
     <head>
-    <title>jughead</title>
+    <link rel="stylesheet" href="sTyle.css">
      </head>
     
              <body>
