--- a/veroica.html
+++ b/veroica.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Veronica</title>
+            <link rel="stylesheet" href="stYle.css">
         </head>
     
             <body>
